buttons, jumbotron and more

--- a/index.html
+++ b/index.html
@@ -4,20 +4,36 @@
     <!--[if lte IE 8]>
     <script src="javascript/html5.js"></script>
     <![endif]-->
-    <script src="javascript/angular.min.js"></script>
+    <!-- <script src="javascript/angular.min.js"></script> 
     <script src="javascript/app.js"></script>
-    <script src="javascript/products.js"></script>
-    <title class="code" id="message">MyTrain </title>
+    <script src="javascript/products.js"></script>-->
+    <title class="code" id="message">Bootstrap_test</title>
     <meta charset="iso-8859-1" content="text/html" http="Content-Type" />
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="/favicon.png" rel="icon" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="favicon.png" rel="icon" />
   </head>
   <body>
     <div class="container">
       <div class="page-header">
-        <h1> Welcome in bootstrap! </h1>
+        <h1> 
+          Welcome in Bootstrap!
+        </h1>
+        <div class="jumbotron">
+          This is a Jumbotron.
+          Lorem ipsum ea voluptate ut et eu duis duis duis aute sint dolor dolore eu cupidatat labore dolor cupidatat aliqua incididunt cupidatat laborum nisi dolore do eu aute veniam aute ullamco irure magna esse elit ad enim ut non nulla esse cupidatat dolore ex voluptate est duis consequat non reprehenderit irure aute ad eu magna adipisicing id in dolor duis ea ut veniam qui anim officia reprehenderit magna consectetur nulla veniam elit irure eiusmod ad ut dolore in eiusmod minim duis excepteur aliqua id sed sint minim sunt ullamco dolor consequat officia aute proident ut occaecat reprehenderit sunt est consectetur officia eiusmod commodo duis ut occaecat adipisicing ex id ea mollit non esse mollit qui enim elit in laboris excepteur elit ut duis id non esse eu incididunt enim excepteur deserunt incididunt consequat adipisicing ut in aliqua ut fugiat veniam mollit eiusmod commodo dolore laborum cillum ut occaecat minim quis proident sed in enim consectetur labore irure ut reprehenderit ullamco cillum sint exercitation non est laboris enim ex laborum sed officia occaecat sed nisi dolore cillum adipisicing velit in incididunt reprehenderit irure mollit non voluptate deserunt sed laborum sit consequat nulla aliquip minim enim proident dolor nostrud mollit reprehenderit pariatur fugiat mollit qui magna dolore eu aliqua occaecat aliqua ut sunt sed ad reprehenderit ut dolore dolor.
+
+          <a href="#" class="btn btn-default">a button</a>
+          <button class="btn btn-primary">primary</button>
+          <button class="btn btn-success">success</button>
+          <button class="btn btn-info">info</button>
+          <button class="btn btn-warning">warning</button>
+          <button class="btn btn-danger">danger</button>
+          <button class="btn btn-link">link</button>
+        </div>
       </div>
     </div>
   </body>
 </html>
+
+
